name: ghcjs-dom-hello
version: 6.0.0.1
cabal-version: 1.24
build-type: Simple
license: MIT
license-file: LICENSE
copyright: (c) Hamish Mackenzie
maintainer: Hamish Mackenzie <Hamish.K.Mackenzie@gmail.com>
stability: stable
homepage: https://github.com/ghcjs/ghcjs-dom-hello
bug-reports: https://github.com/ghcjs/ghcjs-dom-hello/issues
synopsis: GHCJS DOM Hello World, an example package
description:
    This is an implementation of the classic "Hello World" program using GHCJS DOM,
    as an example of how to create a minimal GHCJS DOM application.
    Please submit any suggestions and improvements.
category: Web
author: Hamish Mackenzie
data-files: .ghci cabal.project

source-repository head
    type: git
    location: https://github.com/ghcjs/ghcjs-dom-hello

flag warp
    description: Build ghcjs-dom-hello-warp
    default: True

flag webkitgtk
    description: Build ghcjs-dom-hello-webkitgtk
    default: True

flag webkit2gtk
    description: Use WebKit2 version of WebKitGTK.
    default: True

library
    exposed-modules:
        HelloMain
    build-depends:
        base >=4.2 && <5,
        ghcjs-dom >=0.9 && <0.10,
        mtl >=2.1 && <2.4
    if !impl(ghcjs) && !arch(javascript)
        build-depends:
            jsaddle >=0.9.2 && <0.10,
            jsaddle-warp >=0.9.2 && <0.10
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options: -Wall -ferror-spans

executable ghcjs-dom-hello
    main-is: Main.hs
    build-depends:
        base,
        ghcjs-dom-hello,
        mtl
    hs-source-dirs: src-bin
    default-language: Haskell2010
    ghc-options: -threaded -Wall -ferror-spans

    -- Choose suitable runner
    if !impl(ghcjs) && !arch(javascript)
      if os(osx) || os(ios)
        build-depends:
          jsaddle-wkwebview >=0.9 && <0.10
      else
        if flag(webkit2gtk)
          build-depends:
            jsaddle-webkit2gtk >=0.9 && <0.10
        else
          build-depends:
            jsaddle-webkitgtk >=0.9 && <0.10
    if arch(javascript) && impl(ghc >= 9.10.1)
      ghc-options: -ddisable-js-c-sources

executable ghcjs-dom-hello-warp
    if !flag(warp) || impl(ghcjs) || arch(javascript) || os(ios)
        buildable: False
    main-is: Warp.hs
    build-depends:
        base,
        ghcjs-dom >=0.9 && <0.10,
        mtl >=2.1 && <2.4,
        ghcjs-dom-hello,
        jsaddle-warp >=0.9 && <0.10,
        mtl
    hs-source-dirs: src-bin
    default-language: Haskell2010
    ghc-options: -threaded -Wall -ferror-spans

executable ghcjs-dom-hello-webkitgtk
    if !flag(webkitgtk) || impl(ghcjs) || arch(javascript) || os(ios) || os(osx)
        buildable: False
    main-is: WebKitGTK.hs
    build-depends:
        base,
        ghcjs-dom-hello,
        mtl
    if flag(webkit2gtk)
      build-depends:
        jsaddle-webkit2gtk >=0.9 && <0.10
    else
      build-depends:
        jsaddle-webkitgtk >=0.9 && <0.10
    hs-source-dirs: src-bin
    default-language: Haskell2010
    ghc-options: -threaded -Wall -ferror-spans

executable ghcjs-dom-hello-wkwebview
    if !os(osx) || impl(ghcjs) || arch(javascript)
        buildable: False
    main-is: WKWebView.hs
    build-depends:
        base,
        ghcjs-dom-hello,
        jsaddle-wkwebview >=0.9 && <0.10,
        mtl
    hs-source-dirs: src-bin
    default-language: Haskell2010
    ghc-options: -threaded -Wall -ferror-spans

